src/interpreter/antlr4-runtime/SQLParser.cpp

// Generated from /Users/cobalt/Projects/courses/database-system/minisql/src/interpreter/SQL.g4 by ANTLR 4.8


#include "SQLVisitor.h"

#include "SQLParser.h"


using namespace antlrcpp;
using namespace antlr4;

SQLParser::SQLParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

SQLParser::~SQLParser() {
  delete _interpreter;
}

std::string SQLParser::getGrammarFileName() const {
  return "SQL.g4";
}

const std::vector<std::string>& SQLParser::getRuleNames() const {
  return _ruleNames;
}

dfa::Vocabulary& SQLParser::getVocabulary() const {
  return _vocabulary;
}


//----------------- QueryContext ------------------------------------------------------------------

SQLParser::QueryContext::QueryContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::QueryContext::EOF() {
  return getToken(SQLParser::EOF, 0);
}

SQLParser::StatementContext* SQLParser::QueryContext::statement() {
  return getRuleContext<SQLParser::StatementContext>(0);
}

SQLParser::CommandsContext* SQLParser::QueryContext::commands() {
  return getRuleContext<SQLParser::CommandsContext>(0);
}

tree::TerminalNode* SQLParser::QueryContext::SEMICOLON() {
  return getToken(SQLParser::SEMICOLON, 0);
}


size_t SQLParser::QueryContext::getRuleIndex() const {
  return SQLParser::RuleQuery;
}


antlrcpp::Any SQLParser::QueryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitQuery(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::QueryContext* SQLParser::query() {
  QueryContext *_localctx = _tracker.createInstance<QueryContext>(_ctx, getState());
  enterRule(_localctx, 0, SQLParser::RuleQuery);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(70);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SQLParser::EOF: {
        enterOuterAlt(_localctx, 1);
        setState(58);
        match(SQLParser::EOF);
        break;
      }

      case SQLParser::CREATE:
      case SQLParser::DROP:
      case SQLParser::QUIT:
      case SQLParser::EXEC_FILE: {
        enterOuterAlt(_localctx, 2);
        setState(61);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case SQLParser::CREATE:
          case SQLParser::DROP: {
            setState(59);
            statement();
            break;
          }

          case SQLParser::QUIT:
          case SQLParser::EXEC_FILE: {
            setState(60);
            commands();
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        setState(68);
        _errHandler->sync(this);
        switch (_input->LA(1)) {
          case SQLParser::SEMICOLON: {
            setState(63);
            match(SQLParser::SEMICOLON);
            setState(65);
            _errHandler->sync(this);

            switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 1, _ctx)) {
            case 1: {
              setState(64);
              match(SQLParser::EOF);
              break;
            }

            }
            break;
          }

          case SQLParser::EOF: {
            setState(67);
            match(SQLParser::EOF);
            break;
          }

        default:
          throw NoViableAltException(this);
        }
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- StatementContext ------------------------------------------------------------------

SQLParser::StatementContext::StatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::CreateTableStatementContext* SQLParser::StatementContext::createTableStatement() {
  return getRuleContext<SQLParser::CreateTableStatementContext>(0);
}

SQLParser::DropTableStatementContext* SQLParser::StatementContext::dropTableStatement() {
  return getRuleContext<SQLParser::DropTableStatementContext>(0);
}

SQLParser::CreateIndexStatementContext* SQLParser::StatementContext::createIndexStatement() {
  return getRuleContext<SQLParser::CreateIndexStatementContext>(0);
}

SQLParser::DropIndexStatementContext* SQLParser::StatementContext::dropIndexStatement() {
  return getRuleContext<SQLParser::DropIndexStatementContext>(0);
}


size_t SQLParser::StatementContext::getRuleIndex() const {
  return SQLParser::RuleStatement;
}


antlrcpp::Any SQLParser::StatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitStatement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::StatementContext* SQLParser::statement() {
  StatementContext *_localctx = _tracker.createInstance<StatementContext>(_ctx, getState());
  enterRule(_localctx, 2, SQLParser::RuleStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(76);
    _errHandler->sync(this);
    switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 4, _ctx)) {
    case 1: {
      enterOuterAlt(_localctx, 1);
      setState(72);
      createTableStatement();
      break;
    }

    case 2: {
      enterOuterAlt(_localctx, 2);
      setState(73);
      dropTableStatement();
      break;
    }

    case 3: {
      enterOuterAlt(_localctx, 3);
      setState(74);
      createIndexStatement();
      break;
    }

    case 4: {
      enterOuterAlt(_localctx, 4);
      setState(75);
      dropIndexStatement();
      break;
    }

    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CommandsContext ------------------------------------------------------------------

SQLParser::CommandsContext::CommandsContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::QuitCommandContext* SQLParser::CommandsContext::quitCommand() {
  return getRuleContext<SQLParser::QuitCommandContext>(0);
}

SQLParser::ExecuteFileCommandContext* SQLParser::CommandsContext::executeFileCommand() {
  return getRuleContext<SQLParser::ExecuteFileCommandContext>(0);
}


size_t SQLParser::CommandsContext::getRuleIndex() const {
  return SQLParser::RuleCommands;
}


antlrcpp::Any SQLParser::CommandsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitCommands(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::CommandsContext* SQLParser::commands() {
  CommandsContext *_localctx = _tracker.createInstance<CommandsContext>(_ctx, getState());
  enterRule(_localctx, 4, SQLParser::RuleCommands);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    setState(80);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case SQLParser::QUIT: {
        enterOuterAlt(_localctx, 1);
        setState(78);
        quitCommand();
        break;
      }

      case SQLParser::EXEC_FILE: {
        enterOuterAlt(_localctx, 2);
        setState(79);
        executeFileCommand();
        break;
      }

    default:
      throw NoViableAltException(this);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateTableStatementContext ------------------------------------------------------------------

SQLParser::CreateTableStatementContext::CreateTableStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::CreateTableStatementContext::CREATE() {
  return getToken(SQLParser::CREATE, 0);
}

tree::TerminalNode* SQLParser::CreateTableStatementContext::TABLE() {
  return getToken(SQLParser::TABLE, 0);
}

SQLParser::IdentifierContext* SQLParser::CreateTableStatementContext::identifier() {
  return getRuleContext<SQLParser::IdentifierContext>(0);
}

tree::TerminalNode* SQLParser::CreateTableStatementContext::LPARN() {
  return getToken(SQLParser::LPARN, 0);
}

SQLParser::ColumnElementListContext* SQLParser::CreateTableStatementContext::columnElementList() {
  return getRuleContext<SQLParser::ColumnElementListContext>(0);
}

SQLParser::PrimaryKeyConstraintContext* SQLParser::CreateTableStatementContext::primaryKeyConstraint() {
  return getRuleContext<SQLParser::PrimaryKeyConstraintContext>(0);
}

tree::TerminalNode* SQLParser::CreateTableStatementContext::RPARN() {
  return getToken(SQLParser::RPARN, 0);
}


size_t SQLParser::CreateTableStatementContext::getRuleIndex() const {
  return SQLParser::RuleCreateTableStatement;
}


antlrcpp::Any SQLParser::CreateTableStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitCreateTableStatement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::CreateTableStatementContext* SQLParser::createTableStatement() {
  CreateTableStatementContext *_localctx = _tracker.createInstance<CreateTableStatementContext>(_ctx, getState());
  enterRule(_localctx, 6, SQLParser::RuleCreateTableStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(82);
    match(SQLParser::CREATE);
    setState(83);
    match(SQLParser::TABLE);
    setState(84);
    dynamic_cast<CreateTableStatementContext *>(_localctx)->tableName = identifier();

    setState(85);
    match(SQLParser::LPARN);
    setState(86);
    columnElementList();
    setState(87);
    primaryKeyConstraint();
    setState(88);
    match(SQLParser::RPARN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DropTableStatementContext ------------------------------------------------------------------

SQLParser::DropTableStatementContext::DropTableStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::DropTableStatementContext::DROP() {
  return getToken(SQLParser::DROP, 0);
}

tree::TerminalNode* SQLParser::DropTableStatementContext::TABLE() {
  return getToken(SQLParser::TABLE, 0);
}

SQLParser::IdentifierContext* SQLParser::DropTableStatementContext::identifier() {
  return getRuleContext<SQLParser::IdentifierContext>(0);
}


size_t SQLParser::DropTableStatementContext::getRuleIndex() const {
  return SQLParser::RuleDropTableStatement;
}


antlrcpp::Any SQLParser::DropTableStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitDropTableStatement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::DropTableStatementContext* SQLParser::dropTableStatement() {
  DropTableStatementContext *_localctx = _tracker.createInstance<DropTableStatementContext>(_ctx, getState());
  enterRule(_localctx, 8, SQLParser::RuleDropTableStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(90);
    match(SQLParser::DROP);
    setState(91);
    match(SQLParser::TABLE);
    setState(92);
    dynamic_cast<DropTableStatementContext *>(_localctx)->tableName = identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- CreateIndexStatementContext ------------------------------------------------------------------

SQLParser::CreateIndexStatementContext::CreateIndexStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::CreateIndexStatementContext::CREATE() {
  return getToken(SQLParser::CREATE, 0);
}

tree::TerminalNode* SQLParser::CreateIndexStatementContext::INDEX() {
  return getToken(SQLParser::INDEX, 0);
}

tree::TerminalNode* SQLParser::CreateIndexStatementContext::ON() {
  return getToken(SQLParser::ON, 0);
}

std::vector<SQLParser::IdentifierContext *> SQLParser::CreateIndexStatementContext::identifier() {
  return getRuleContexts<SQLParser::IdentifierContext>();
}

SQLParser::IdentifierContext* SQLParser::CreateIndexStatementContext::identifier(size_t i) {
  return getRuleContext<SQLParser::IdentifierContext>(i);
}

tree::TerminalNode* SQLParser::CreateIndexStatementContext::LPARN() {
  return getToken(SQLParser::LPARN, 0);
}

tree::TerminalNode* SQLParser::CreateIndexStatementContext::RPARN() {
  return getToken(SQLParser::RPARN, 0);
}


size_t SQLParser::CreateIndexStatementContext::getRuleIndex() const {
  return SQLParser::RuleCreateIndexStatement;
}


antlrcpp::Any SQLParser::CreateIndexStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitCreateIndexStatement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::CreateIndexStatementContext* SQLParser::createIndexStatement() {
  CreateIndexStatementContext *_localctx = _tracker.createInstance<CreateIndexStatementContext>(_ctx, getState());
  enterRule(_localctx, 10, SQLParser::RuleCreateIndexStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(94);
    match(SQLParser::CREATE);
    setState(95);
    match(SQLParser::INDEX);
    setState(96);
    dynamic_cast<CreateIndexStatementContext *>(_localctx)->indexName = identifier();
    setState(97);
    match(SQLParser::ON);
    setState(98);
    dynamic_cast<CreateIndexStatementContext *>(_localctx)->tableName = identifier();

    setState(99);
    match(SQLParser::LPARN);
    setState(100);
    dynamic_cast<CreateIndexStatementContext *>(_localctx)->columnName = identifier();
    setState(101);
    match(SQLParser::RPARN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DropIndexStatementContext ------------------------------------------------------------------

SQLParser::DropIndexStatementContext::DropIndexStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::DropIndexStatementContext::DROP() {
  return getToken(SQLParser::DROP, 0);
}

tree::TerminalNode* SQLParser::DropIndexStatementContext::INDEX() {
  return getToken(SQLParser::INDEX, 0);
}

SQLParser::IdentifierContext* SQLParser::DropIndexStatementContext::identifier() {
  return getRuleContext<SQLParser::IdentifierContext>(0);
}


size_t SQLParser::DropIndexStatementContext::getRuleIndex() const {
  return SQLParser::RuleDropIndexStatement;
}


antlrcpp::Any SQLParser::DropIndexStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitDropIndexStatement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::DropIndexStatementContext* SQLParser::dropIndexStatement() {
  DropIndexStatementContext *_localctx = _tracker.createInstance<DropIndexStatementContext>(_ctx, getState());
  enterRule(_localctx, 12, SQLParser::RuleDropIndexStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(103);
    match(SQLParser::DROP);
    setState(104);
    match(SQLParser::INDEX);
    setState(105);
    dynamic_cast<DropIndexStatementContext *>(_localctx)->indexName = identifier();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SelectStatementContext ------------------------------------------------------------------

SQLParser::SelectStatementContext::SelectStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::SelectStatementContext::SELECT() {
  return getToken(SQLParser::SELECT, 0);
}

tree::TerminalNode* SQLParser::SelectStatementContext::STAR() {
  return getToken(SQLParser::STAR, 0);
}

tree::TerminalNode* SQLParser::SelectStatementContext::FROM() {
  return getToken(SQLParser::FROM, 0);
}

SQLParser::IdentifierContext* SQLParser::SelectStatementContext::identifier() {
  return getRuleContext<SQLParser::IdentifierContext>(0);
}

SQLParser::WhereClauseContext* SQLParser::SelectStatementContext::whereClause() {
  return getRuleContext<SQLParser::WhereClauseContext>(0);
}


size_t SQLParser::SelectStatementContext::getRuleIndex() const {
  return SQLParser::RuleSelectStatement;
}


antlrcpp::Any SQLParser::SelectStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitSelectStatement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::SelectStatementContext* SQLParser::selectStatement() {
  SelectStatementContext *_localctx = _tracker.createInstance<SelectStatementContext>(_ctx, getState());
  enterRule(_localctx, 14, SQLParser::RuleSelectStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(107);
    match(SQLParser::SELECT);
    setState(108);
    match(SQLParser::STAR);
    setState(109);
    match(SQLParser::FROM);
    setState(110);
    dynamic_cast<SelectStatementContext *>(_localctx)->tableName = identifier();
    setState(112);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQLParser::WHERE) {
      setState(111);
      whereClause();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- InsertStatementContext ------------------------------------------------------------------

SQLParser::InsertStatementContext::InsertStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::InsertStatementContext::INSERT() {
  return getToken(SQLParser::INSERT, 0);
}

tree::TerminalNode* SQLParser::InsertStatementContext::INTO() {
  return getToken(SQLParser::INTO, 0);
}

tree::TerminalNode* SQLParser::InsertStatementContext::VALUES() {
  return getToken(SQLParser::VALUES, 0);
}

SQLParser::IdentifierContext* SQLParser::InsertStatementContext::identifier() {
  return getRuleContext<SQLParser::IdentifierContext>(0);
}

tree::TerminalNode* SQLParser::InsertStatementContext::LPARN() {
  return getToken(SQLParser::LPARN, 0);
}

SQLParser::AttributeListContext* SQLParser::InsertStatementContext::attributeList() {
  return getRuleContext<SQLParser::AttributeListContext>(0);
}

tree::TerminalNode* SQLParser::InsertStatementContext::RPARN() {
  return getToken(SQLParser::RPARN, 0);
}


size_t SQLParser::InsertStatementContext::getRuleIndex() const {
  return SQLParser::RuleInsertStatement;
}


antlrcpp::Any SQLParser::InsertStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitInsertStatement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::InsertStatementContext* SQLParser::insertStatement() {
  InsertStatementContext *_localctx = _tracker.createInstance<InsertStatementContext>(_ctx, getState());
  enterRule(_localctx, 16, SQLParser::RuleInsertStatement);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(114);
    match(SQLParser::INSERT);
    setState(115);
    match(SQLParser::INTO);
    setState(116);
    dynamic_cast<InsertStatementContext *>(_localctx)->tableName = identifier();
    setState(117);
    match(SQLParser::VALUES);

    setState(118);
    match(SQLParser::LPARN);
    setState(119);
    attributeList();
    setState(120);
    match(SQLParser::RPARN);
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- DeleteStatementContext ------------------------------------------------------------------

SQLParser::DeleteStatementContext::DeleteStatementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::DeleteStatementContext::DELETE() {
  return getToken(SQLParser::DELETE, 0);
}

tree::TerminalNode* SQLParser::DeleteStatementContext::FROM() {
  return getToken(SQLParser::FROM, 0);
}

SQLParser::IdentifierContext* SQLParser::DeleteStatementContext::identifier() {
  return getRuleContext<SQLParser::IdentifierContext>(0);
}

SQLParser::WhereClauseContext* SQLParser::DeleteStatementContext::whereClause() {
  return getRuleContext<SQLParser::WhereClauseContext>(0);
}


size_t SQLParser::DeleteStatementContext::getRuleIndex() const {
  return SQLParser::RuleDeleteStatement;
}


antlrcpp::Any SQLParser::DeleteStatementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitDeleteStatement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::DeleteStatementContext* SQLParser::deleteStatement() {
  DeleteStatementContext *_localctx = _tracker.createInstance<DeleteStatementContext>(_ctx, getState());
  enterRule(_localctx, 18, SQLParser::RuleDeleteStatement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(122);
    match(SQLParser::DELETE);
    setState(123);
    match(SQLParser::FROM);
    setState(124);
    dynamic_cast<DeleteStatementContext *>(_localctx)->tableName = identifier();
    setState(126);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQLParser::WHERE) {
      setState(125);
      whereClause();
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- WhereClauseContext ------------------------------------------------------------------

SQLParser::WhereClauseContext::WhereClauseContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

tree::TerminalNode* SQLParser::WhereClauseContext::WHERE() {
  return getToken(SQLParser::WHERE, 0);
}

SQLParser::ConditionListContext* SQLParser::WhereClauseContext::conditionList() {
  return getRuleContext<SQLParser::ConditionListContext>(0);
}


size_t SQLParser::WhereClauseContext::getRuleIndex() const {
  return SQLParser::RuleWhereClause;
}


antlrcpp::Any SQLParser::WhereClauseContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitWhereClause(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::WhereClauseContext* SQLParser::whereClause() {
  WhereClauseContext *_localctx = _tracker.createInstance<WhereClauseContext>(_ctx, getState());
  enterRule(_localctx, 20, SQLParser::RuleWhereClause);

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(128);
    match(SQLParser::WHERE);
    setState(129);
    conditionList();
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColumnElementContext ------------------------------------------------------------------

SQLParser::ColumnElementContext::ColumnElementContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

SQLParser::DataTypeContext* SQLParser::ColumnElementContext::dataType() {
  return getRuleContext<SQLParser::DataTypeContext>(0);
}

SQLParser::IdentifierContext* SQLParser::ColumnElementContext::identifier() {
  return getRuleContext<SQLParser::IdentifierContext>(0);
}

tree::TerminalNode* SQLParser::ColumnElementContext::UNIQUE() {
  return getToken(SQLParser::UNIQUE, 0);
}


size_t SQLParser::ColumnElementContext::getRuleIndex() const {
  return SQLParser::RuleColumnElement;
}


antlrcpp::Any SQLParser::ColumnElementContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitColumnElement(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::ColumnElementContext* SQLParser::columnElement() {
  ColumnElementContext *_localctx = _tracker.createInstance<ColumnElementContext>(_ctx, getState());
  enterRule(_localctx, 22, SQLParser::RuleColumnElement);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(131);
    dynamic_cast<ColumnElementContext *>(_localctx)->columnName = identifier();
    setState(132);
    dataType();
    setState(134);
    _errHandler->sync(this);

    _la = _input->LA(1);
    if (_la == SQLParser::UNIQUE) {
      setState(133);
      dynamic_cast<ColumnElementContext *>(_localctx)->unique = match(SQLParser::UNIQUE);
    }
   
  }
  catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- ColumnElementListContext ------------------------------------------------------------------

SQLParser::ColumnElementListContext::ColumnElementListContext(ParserRuleContext *parent, size_t invokingState)
  : ParserRuleContext(parent, invokingState) {
}

std::vector<tree::TerminalNode *> SQLParser::ColumnElementListContext::COMMA() {
  return getTokens(SQLParser::COMMA);
}

tree::TerminalNode* SQLParser::ColumnElementListContext::COMMA(size_t i) {
  return getToken(SQLParser::COMMA, i);
}

std::vector<SQLParser::ColumnElementContext *> SQLParser::ColumnElementListContext::columnElement() {
  return getRuleContexts<SQLParser::ColumnElementContext>();
}

SQLParser::ColumnElementContext* SQLParser::ColumnElementListContext::columnElement(size_t i) {
  return getRuleContext<SQLParser::ColumnElementContext>(i);
}


size_t SQLParser::ColumnElementListContext::getRuleIndex() const {
  return SQLParser::RuleColumnElementList;
}


antlrcpp::Any SQLParser::ColumnElementListContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<SQLVisitor*>(visitor))
    return parserVisitor->visitColumnElementList(this);
  else
    return visitor->visitChildren(this);
}

SQLParser::ColumnElementListContext* SQLParser::columnElementList() {
  ColumnElementListContext *_localctx = _tracker.createInstance<ColumnElementListContext>(_ctx, getState());
  enterRule(_localctx, 24, SQLParser::RuleColumnElementList);
  size_t _la = 0;

  auto onExit = finally([=] {
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(139); 
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(136);
      dynamic_cast<ColumnElementListContext *>(_localctx)->columnElementContext = columnElement();
      dynamic_cast<ColumnElementListContext *>(_localctx)->elements.push_back(dynamic_cast<ColumnElementListContext *>(_localctx)->columnElementContext);
      setState(137);
      match(SQLParser::COMMA);
      setState(141); 
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == SQLParser::IDENTIFIER
